# Inward-region-based-partition

./: README.md
Source/: CMakeLists.txt  main.cpp  myself.cpp  region_growing_tutorial.cpp
Source/include/: myself.h
